Fixed javafx error & Updated readme file